option-menu: Fix calculation of x value for multiple screen setups

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=792940